--- a/publish.gradle
+++ b/publish.gradle
@@ -3,8 +3,8 @@ apply plugin: 'bintray-release'
 publish {
     userOrg = "a-liya" // bintray.com 用户名
     groupId = "com.aliya" // jcenter上的路径
-    artifactId = publishArtifact
-    publishVersion = publishVersion // 版本号
-    desc = publishDesc
-    website = publishWebsite
+    artifactId = 'fitwindow'
+    publishVersion = version_name // 版本号
+    desc = '拓展Android view 的 FitSystemWindow的功能'
+    website = 'https://github.com/a-liYa/FitSystemWindow'
 }
